Added Checkpoint!!!!!! They use the game instance so the level can just be reopened when the player dies and the checkpoint will kick in!

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,10 +8,9 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ParcourGamemode.ParcourGamemode_C
 GlobalDefaultServerGameMode=None
-
-
+GameInstanceClass=/Game/ParcourGameInstance.ParcourGameInstance_C
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/ParcourStuffz")
@@ -22,5 +21,3 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
-
-
