Changed the map! The basic game should now be done! (atleast the more tutorial part) Also changed last platform text to now also have WIP!

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=ParcourStuffz
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+EditorStartupMap=/Game/ThirdPersonBP/Maps/MainLevel.MainLevel
+GameDefaultMap=/Game/ThirdPersonBP/Maps/MainLevel.MainLevel
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
